<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sh_app_bg"
    android:orientation="vertical"
    tools:context=".sn.SDBBroActivity">

    <View
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/input_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/url_et_bg"
            android:hint="@string/search_an_address"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="43dp"
            android:paddingEnd="50dp"
            android:singleLine="true"
            android:textColor="#5B5B5B"
            android:textColorHint="#5B5B5B"
            android:textSize="14sp"
            tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/add_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            app:srcCompat="@mipmap/fav" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@mipmap/search" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/webPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/webProgress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:max="100"
                android:progress="60"
                android:progressDrawable="@drawable/sh_web_bar" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


        <FrameLayout
            android:id="@+id/homePage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="76dp">

            <LinearLayout
                android:id="@+id/item_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/itemFacebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/item_facebook"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:drawableTopCompat="@mipmap/facebook" />

                <TextView
                    android:id="@+id/itemAmazon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/item_amazon"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:drawableTopCompat="@mipmap/amazon" />

                <TextView
                    android:id="@+id/itemInstagram"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/item_instagram"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:drawableTopCompat="@mipmap/instagram" />

                <TextView
                    android:id="@+id/itemTwitter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/item_twitter"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:drawableTopCompat="@mipmap/twitter" />

            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/adDefault"
                    android:layout_width="match_parent"
                    android:layout_height="226dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_ad_def" />

                <include
                    android:id="@+id/adView"
                    layout="@layout/sdb_a_layout" />

            </FrameLayout>


        </FrameLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/pre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/preImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/pre_1" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/nextImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/next_1" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/home" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/mark" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/history" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>